--- a/reflexion1.html
+++ b/reflexion1.html
@@ -20,13 +20,19 @@
       <div class="about">
         <img src="img/Reflexiones/tecnologia web.webp" alt="">
         <div class="about-info">
-          <h2>Tecnologias Web</h2>
+          <h2 class="preguntas_titulo">Tecnologías Web</h2>
           <div class="divider"></div>
-          <p>La Constante Evolución: Las tecnologías web están en constante evolución, lo que presenta desafíos y oportunidades para desarrolladores y empresas. La reflexión aquí es que la capacidad de adaptación y el aprendizaje continuo son esenciales para mantenerse al día en este campo. La voluntad de abrazar nuevas tecnologías y enfoques es clave para el éxito en el mundo web.</p>
-          <p>Impacto en la Sociedad: Las tecnologías web tienen un impacto significativo en la sociedad. Desde la forma en que nos comunicamos y consumimos información hasta cómo trabajamos y accedemos a servicios, estas tecnologías tienen un papel crucial en la vida moderna. La reflexión aquí es la responsabilidad que recae en los desarrolladores y creadores web para construir experiencias web que sean accesibles, seguras y éticas, y para considerar las implicaciones más amplias de su trabajo en la sociedad.</p>
-          
+          <!-- Respuestas a las preguntas de reflexión -->
+          <div class="reflexion">
+            <p class="preguntas_reflex">¿Cómo aprendí sobre las tecnologías web?</p>
+            <p>Aprendí sobre las tecnologías web a través de cursos en línea, documentación oficial y proyectos prácticos. La experimentación y la aplicación directa de los conceptos fueron fundamentales para mi aprendizaje.</p>
+            <p class="preguntas_reflex">¿Para qué aprendí y cómo aplico ese conocimiento en mi trabajo?</p>
+            <p>Aprendí sobre tecnologías web para mejorar mis habilidades como desarrollador y adaptarme a la evolución constante del campo. Aplico este conocimiento en mi trabajo diario desarrollando sitios web modernos y aplicaciones, asegurándome de seguir mejores prácticas, optimizando la experiencia del usuario y considerando el impacto ético de mi trabajo en la sociedad.</p>
+          </div>
+          <!-- Párrafo original eliminado -->
+          <!-- <p>Impacto en la Sociedad: Las tecnologías web tienen un impacto significativo en la sociedad...</p> -->
         </div>
-      </div>
+      </div>z
     
       </footer>
     </body>
