--- a/reflexion3.html
+++ b/reflexion3.html
@@ -22,11 +22,14 @@
         <div class="about-info">
           <h2>HTML, CSS Y JS</h2>
           <div class="divider"></div>
+        <div class="reflexion">
+          <p class="preguntas_reflex">¿Qué aprendí sobre HTML, CSS y JavaScript?</p>
           <p>HTML, CSS y JavaScript son tecnologías web fundamentales que se complementan entre sí. HTML se encarga de la estructura y el contenido, CSS controla la presentación y el diseño visual, y JavaScript permite la interactividad y el comportamiento dinámico. Esta complementariedad permite a los desarrolladores crear sitios web y aplicaciones web completas y altamente funcionales.</p>
-          <p>Se basan en estándares abiertos, lo que significa que son independientes de plataformas y navegadores. Esto garantiza la portabilidad y la accesibilidad en una amplia gama de dispositivos y navegadores, lo que resulta en una mejor experiencia para los usuarios finales. La adhesión a estándares abiertos fomenta la interoperabilidad y la accesibilidad en la web, lo que es esencial en un entorno web diverso y en constante evolución.</p>
-          
+          <p class="preguntas_reflex">¿Cómo aprendí sobre HTML, CSS y JavaScript?</p>
+          <p>He adquirido conocimientos sobre HTML, CSS y JavaScript a través de cursos en línea, prácticas de codificación y la construcción de proyectos reales. La práctica constante, la experimentación y la resolución de problemas me han permitido entender cómo estas tecnologías trabajan juntas para crear experiencias web impactantes. Además, he seguido la documentación oficial y recursos comunitarios para mantenerme actualizado con las mejores prácticas y estándares en constante evolución.</p>
+          <p>Estas tecnologías se basan en estándares abiertos, lo que significa que son independientes de plataformas y navegadores. Esto garantiza la portabilidad y la accesibilidad en una amplia gama de dispositivos y navegadores, lo que resulta en una mejor experiencia para los usuarios finales. La adhesión a estándares abiertos fomenta la interoperabilidad y la accesibilidad en la web, lo que es esencial en un entorno web diverso y en constante evolución.</p>
         </div>
-      </div>
+
     
       </footer>
     </body>
