--- a/reflexion5.html
+++ b/reflexion5.html
@@ -22,9 +22,15 @@
         <div class="about-info">
           <h2>Introduccion a REACT</h2>
           <div class="divider"></div>
+        <div class="reflexion">
+          <p class="preguntas_reflex">¿Qué aprendí sobre React y el desarrollo web?</p>
           <p>React introduce un enfoque altamente eficiente y organizado para el desarrollo web mediante el uso de componentes reutilizables. Esta arquitectura permite a los desarrolladores dividir su aplicación en piezas más pequeñas y autónomas, lo que facilita la reutilización y el mantenimiento del código. La introducción de componentes en React promueve la escalabilidad y la eficiencia en el desarrollo de interfaces de usuario.</p>
+          <p class="preguntas_reflex">¿Cómo aprendí sobre React y el desarrollo web?</p>
+          <p>He adquirido conocimientos sobre React y el desarrollo web a través de cursos especializados, documentación oficial y la construcción de proyectos prácticos con React. La práctica constante, la creación de componentes reales y la colaboración con la comunidad de React han sido esenciales para entender y aplicar eficientemente esta biblioteca en proyectos web. Además, seguir las mejores prácticas y patrones recomendados por la comunidad ha sido crucial para desarrollar aplicaciones React robustas y escalables.</p>
           <p>React utiliza el concepto del Virtual DOM para lograr una reactividad y eficiencia notables. La capacidad de React de actualizar solo las partes de la interfaz de usuario que han cambiado, en lugar de volver a representar toda la página, mejora significativamente el rendimiento de la aplicación. Esto resulta en una experiencia de usuario más fluida y rápida, especialmente en aplicaciones web complejas.</p>
-          
+        </div>
+        </div>
+
         </div>
       </div>
     
