--- a/reflexion7.html
+++ b/reflexion7.html
@@ -22,11 +22,16 @@
       <div class="about">
         <img src="img/Reflexiones/hooks.jpg" alt="">
         <div class="about-info">
-          <h2>Uso de Hooks</h2>
+          <h2>Uso de Hooks en React</h2>
           <div class="divider"></div>
-          <p>El uso de Hooks en React es fundamental para la gestión del estado en componentes funcionales. Antes de la introducción de Hooks, la gestión del estado era principalmente una característica de los componentes de clase. Con los Hooks, los desarrolladores pueden agregar y manipular el estado en componentes funcionales, lo que simplifica el código y mejora la legibilidad. Esto es esencial para crear aplicaciones React más eficientes y fáciles de mantener.</p>
-          <p>Los Hooks, como useEffect, ofrecen una forma más flexible de manejar el ciclo de vida y los efectos secundarios en componentes funcionales. Esto significa que los desarrolladores pueden realizar tareas como realizar solicitudes de red, suscripciones a eventos y actualizaciones del DOM en componentes funcionales, en lugar de depender exclusivamente de componentes de clase. Esta flexibilidad es esencial para crear aplicaciones web interactivas y reactivas.</p>
-          
+          <div class="reflexion">
+            <p class="preguntas_reflex">¿Qué aprendí sobre el uso de Hooks en React?</p>
+            <p>El uso de Hooks en React es fundamental para la gestión del estado en componentes funcionales. Antes de la introducción de Hooks, la gestión del estado era principalmente una característica de los componentes de clase. Con los Hooks, los desarrolladores pueden agregar y manipular el estado en componentes funcionales, lo que simplifica el código y mejora la legibilidad. Esto es esencial para crear aplicaciones React más eficientes y fáciles de mantener.</p>
+            <p class="preguntas_reflex">¿Cómo aprendí sobre el uso de Hooks en React?</p>
+            <p>He aprendido sobre el uso de Hooks en React a través de cursos especializados, tutoriales prácticos y la construcción de proyectos React en los que necesitaba gestionar el estado de manera efectiva. La práctica constante, la experimentación con distintos tipos de Hooks y la revisión de la documentación oficial de React han sido cruciales para entender y aplicar eficientemente el uso de Hooks en mis proyectos.</p>
+            <p>Los Hooks, como useEffect, ofrecen una forma más flexible de manejar el ciclo de vida y los efectos secundarios en componentes funcionales. Esto significa que los desarrolladores pueden realizar tareas como realizar solicitudes de red, suscripciones a eventos y actualizaciones del DOM en componentes funcionales, en lugar de depender exclusivamente de componentes de clase. Esta flexibilidad es esencial para crear aplicaciones web interactivas y reactivas.</p>
+          </div>
+
         </div>
       </div>
       
