--- a/semana1.html
+++ b/semana1.html
@@ -125,6 +125,15 @@
         </div>
     </section>
 
+    <div class="about">
+        <img src="https://cocosolution.com/cms/uploads/608b02a630405ebaa3681dad4d489f65.png" alt="">
+        <div class="about-info">
+          <h2>Conclusiones</h2>
+          <div class="divider"></div>
+          <p >Las tecnologías web engloban un conjunto diverso de herramientas y técnicas que permiten la creación y el funcionamiento de aplicaciones y sitios web en Internet. Desde lenguajes de marcado hasta programación del lado del cliente y del servidor, estas tecnologías son esenciales para la construcción de soluciones web efectivas y seguras en la era digital.</p>
+    
+        </div>
+      </div>
 
     <script src="/JavaScript/semanas.js"></script>
 </body>
