--- a/semana3.html
+++ b/semana3.html
@@ -119,7 +119,15 @@
             </div>
         </div>
     </section>
-
+    <div class="about">
+        <img src="https://manager.cadbimcenter.com/img/cursos/000001/cirso-t-html-css-bootstrap-1668486294.jpg" alt="">
+        <div class="about-info">
+          <h2>Conclusiones</h2>
+          <div class="divider"></div>
+          <p >HTML y CSS constituye la base del desarrollo web, permitiendo la creación de páginas web con una estructura sólida y un diseño atractivo. Además, las librerías de JavaScript, como jQuery, React, Angular y Vue.js, añaden un nivel adicional de interactividad y funcionalidad a las aplicaciones web. La colaboración de estas tecnologías es esencial para el desarrollo de sitios web modernos y efectivos, mejorando la experiencia del usuario y brindando a los desarrolladores herramientas poderosas para crear interfaces dinámicas y atractivas. </p>
+    
+        </div>
+      </div>
 
 <script src="/JavaScript/semanas3.js"></script>
 </body>
