--- a/semana6.html
+++ b/semana6.html
@@ -119,7 +119,15 @@
             </div>
         </div>
     </section>
-
+    <div class="about">
+        <img src="https://manager.cadbimcenter.com/img/cursos/000001/cirso-t-html-css-bootstrap-1668486294.jpg" alt="">
+        <div class="about-info">
+          <h2>Conclusiones</h2>
+          <div class="divider"></div>
+          <p >Los eventos permiten la interacción del usuario, las condiciones habilitan la toma de decisiones, y los bucles posibilitan la repetición eficiente de acciones en JavaScript. Combinados, estos conceptos forman la base de la programación dinámica, la automatización de tareas y la creación de experiencias interactivas en aplicaciones web y programas en general. Un conocimiento sólido de estos elementos es esencial para desarrolladores que desean crear aplicaciones web efectivas y receptivas. </p>
+    
+        </div>
+      </div>
 
 <script src="/JavaScript/semanas6.js"></script>
 </body>
