--- a/reflexion6.html
+++ b/reflexion6.html
@@ -20,11 +20,16 @@
       <div class="about">
         <img src="img/Reflexiones/js.jpg" alt="">
         <div class="about-info">
-          <h2>Eventos, condiciones y Bucles en JS</h2>
+          <h2>Eventos, condiciones y Bucles en JavaScript</h2>
           <div class="divider"></div>
-          <p>La manipulación de eventos, condiciones y bucles en JavaScript permite la creación de experiencias web altamente interactivas. Los eventos, como clics de ratón o pulsaciones de teclas, permiten a los usuarios interactuar con la página de manera dinámica. La utilización de condiciones y bucles agrega lógica y control a estas interacciones, lo que permite personalizar la experiencia del usuario y responder a diferentes situaciones de manera eficaz.</p>
-          <p>JavaScript es esencial para la automatización de tareas y el procesamiento de datos en la web. Los bucles permiten recorrer y procesar grandes conjuntos de datos de manera eficiente, lo que es especialmente útil en aplicaciones como la manipulación de listas o la generación de contenido dinámico. Además, las condiciones permiten establecer reglas y tomar decisiones basadas en datos o interacciones del usuario, lo que contribuye a la funcionalidad de las aplicaciones web. En conjunto, estos conceptos permiten la creación de aplicaciones web altamente funcionales y versátiles.</p>
-          
+          <div class="reflexion">
+            <p class="preguntas_reflex">¿Qué aprendí sobre la manipulación de eventos, condiciones y bucles en JavaScript?</p>
+            <p>La manipulación de eventos, condiciones y bucles en JavaScript permite la creación de experiencias web altamente interactivas. Los eventos, como clics de ratón o pulsaciones de teclas, permiten a los usuarios interactuar con la página de manera dinámica. La utilización de condiciones y bucles agrega lógica y control a estas interacciones, lo que permite personalizar la experiencia del usuario y responder a diferentes situaciones de manera eficaz.</p>
+            <p class="preguntas_reflex">¿Cómo aprendí sobre la manipulación de eventos, condiciones y bucles en JavaScript?</p>
+            <p>He adquirido conocimientos sobre la manipulación de eventos, condiciones y bucles en JavaScript mediante la participación en proyectos prácticos, la experimentación con el código y la lectura de documentación oficial. La práctica constante, la resolución de desafíos y la colaboración con la comunidad de desarrollo web han sido fundamentales para entender y aplicar eficientemente estos conceptos en la construcción de experiencias web interactivas.</p>
+            <p>JavaScript es esencial para la automatización de tareas y el procesamiento de datos en la web. Los bucles permiten recorrer y procesar grandes conjuntos de datos de manera eficiente, lo que es especialmente útil en aplicaciones como la manipulación de listas o la generación de contenido dinámico. Además, las condiciones permiten establecer reglas y tomar decisiones basadas en datos o interacciones del usuario, lo que contribuye a la funcionalidad de las aplicaciones web. En conjunto, estos conceptos permiten la creación de aplicaciones web altamente funcionales y versátiles.</p>
+          </div>
+
         </div>
       </div>
     
