--- a/sobremi.html
+++ b/sobremi.html
@@ -15,9 +15,9 @@
     <img src="img/yo.jpg" width="180" alt="" class="box-img">
     <h1>Cristofer Maykel Bautista Huaman</h1>
     <h2>Estudiante de Ingenieria de Sistemas - UNCP</h2>
-    <p>Maykel Bautista es un individuo apasionado por la fotografía y el rally. Su amor por la fotografía lo inspira a capturar momentos memorables y perspectivas únicas, mientras que su entusiasmo por el rally lo sumerge en el emocionante mundo de los deportes de motor. Sin embargo, su visión de futuro es aún más ambiciosa, ya que aspira a establecer su propia empresa que combine sus dos pasiones, ofreciendo servicios de fotografía especializada en deportes de motor y creando una comunidad en la que otros puedan compartir su entusiasmo por estos mundos apasionantes.</p>
+    <p>Bueno ya sabran que mi nombre esMaykel Bautista spy un chico apasionado por la fotografía y el rally. Mi amor por la fotografía me inspira a capturar momentos memorables y perspectivas únicas, mientras que mi entusiasmo por el rally me sumerge en el emocionante mundo de los deportes de motor. Sin embargo, mi visión de futuro es aún más ambiciosa, ya que aspira a establecer mi propia empresa que combine sus dos pasiones, ofreciendo servicios de fotografía especializada en deportes de motor y creando una comunidad en la que otros puedan compartir su entusiasmo por estos mundos apasionantes.</p>
     <ul>
-      <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+      <li><a href="https://www.facebook.com/maykel.bautista79/"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
       <li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
       <li><a href="#"><i class="fa fa-google-plus-square" aria-hidden="true"></i></i></a></li>
       <li><a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
