--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
         
 
             <a href="reflexion1.html" class="proyecto">
-                <img src="img/Reflexiones/tecnologia web.webp" alt="">
+                <img src="https://images.pexels.com/photos/577585/pexels-photo-577585.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="overlay">
                     <h3>Tecnologias Web</h3>
                     <p>Semana 1</p>
@@ -493,42 +493,42 @@
               </a>
 
               <a href="reflexion2.html" class="proyecto">
-                <img src="img/Reflexiones/web.jpg" alt="">
+                <img src="https://images.pexels.com/photos/8721342/pexels-photo-8721342.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="overlay">
                     <h3>Open Web Plaform</h3>
                     <p>Semana 2</p>
                 </div>
               </a>
               <a href="reflexion3.html" class="proyecto">
-                <img src="img/Reflexiones/java.jpg" alt="">
+                <img src="https://images.pexels.com/photos/574071/pexels-photo-574071.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="overlay">
                     <h3>HTML CSS Y JS</h3>
                     <p>Semana 3</p>
                 </div>
               </a>
               <a href="reflexion4.html" class="proyecto">
-                <img src="img/Reflexiones/html.jpg" alt="">
+                <img src="https://images.pexels.com/photos/3861972/pexels-photo-3861972.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="overlay">
                     <h3>FrontEnd con ECMAScript</h3>
                     <p>Semana 4</p>
                 </div>
               </a>
               <a href="reflexion5.html" class="proyecto">
-                <img src="img/Reflexiones/react.jpg" alt="">
+                <img src="https://images.pexels.com/photos/5483077/pexels-photo-5483077.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="overlay">
                     <h3>Introducción a REACT</h3>
                     <p>Semana 5</p>
                 </div>
               </a>
               <a href="reflexion6.html" class="proyecto">
-                <img src="img/Reflexiones/js.jpg" alt="">
+                <img src="https://images.pexels.com/photos/7654585/pexels-photo-7654585.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
                 <div class="overlay">
                     <h3>Eventos , condiciones y Bucles con JS</h3>
                     <p>Semana 6</p>
                 </div>
               </a>
               <a href="reflexion7.html" class="proyecto">
-              <img src="img/Reflexiones/hooks.jpg" alt="">
+              <img src="https://images.pexels.com/photos/247791/pexels-photo-247791.png?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
               <div class="overlay">
                   <h3>Uso de Hooks</h3>
                   <p>Semana 7</p>
