--- a/reflexion7.html
+++ b/reflexion7.html
@@ -20,7 +20,7 @@
     </footer>
 
       <div class="about">
-        <img src="img/Reflexiones/hooks.jpg" alt="">
+        <img src="https://images.pexels.com/photos/1240527/pexels-photo-1240527.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
         <div class="about-info">
           <h2>Uso de Hooks en React</h2>
           <div class="divider"></div>
