--- a/semana1.html
+++ b/semana1.html
@@ -16,7 +16,7 @@
    <header>
 
     <section>
-        <div class="presentacion">
+        <div class="presentacion_1">
            
 
             <h1 class="titulo"> Tecnologias Web</h1>
@@ -24,9 +24,9 @@
 
     </div>
 
-        <video onloadedmetadata="this.muted=true" autoplay loop>
-        <source src="./video/video (2160p).mp4">
-        </video>
+        <div class="fondoprincipal">
+        <img src="https://images.pexels.com/photos/247791/pexels-photo-247791.png?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+      </div>
     </section>
    </header>
 
