--- a/semana9.html
+++ b/semana9.html
@@ -15,16 +15,16 @@
     
    <header>
     <section>
-        <div class="presentacion">
+        <div class="presentacion_1">
            
             <h1 class="titulo"> Next JS – CSR / SSR</h1>
             <h3 class="nombre">Descubre todo lo que se aprendio en la novena semana</h3>
 
     </div>
 
-        <video onloadedmetadata="this.muted=true" autoplay loop>
-        <source src="./video/video (2160p).mp4">
-        </video>
+    <div class="fondoprincipal">
+        <img src="https://images.pexels.com/photos/1122528/pexels-photo-1122528.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
+      </div>
     </section>
    </header>
 
