--- a/sobremi.html
+++ b/sobremi.html
@@ -9,28 +9,27 @@
   <link rel="stylesheet" href="css/sobremi.css">
 </head>
 <body>
-   
-  <section class="box">
 
+  <div class="fondoprincipal">
+    <img src="https://images.pexels.com/photos/1350461/pexels-photo-1350461.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+  </div>
+  
+  <section class="box">
     <img src="img/yo.jpg" width="180" alt="" class="box-img">
     <h1>Cristofer Maykel Bautista Huaman</h1>
     <h2>Estudiante de Ingenieria de Sistemas - UNCP</h2>
-    <p>Bueno ya sabran que mi nombre esMaykel Bautista spy un chico apasionado por la fotografía y el rally. Mi amor por la fotografía me inspira a capturar momentos memorables y perspectivas únicas, mientras que mi entusiasmo por el rally me sumerge en el emocionante mundo de los deportes de motor. Sin embargo, mi visión de futuro es aún más ambiciosa, ya que aspira a establecer mi propia empresa que combine sus dos pasiones, ofreciendo servicios de fotografía especializada en deportes de motor y creando una comunidad en la que otros puedan compartir su entusiasmo por estos mundos apasionantes.</p>
+    <p>Bueno ya sabrán que mi nombre es Maykel Bautista, soy un chico apasionado por la fotografía y el rally. Mi amor por la fotografía me inspira a capturar momentos memorables y perspectivas únicas, mientras que mi entusiasmo por el rally me sumerge en el emocionante mundo de los deportes de motor. Sin embargo, mi visión de futuro es aún más ambiciosa, ya que aspira a establecer mi propia empresa que combine sus dos pasiones, ofreciendo servicios de fotografía especializada en deportes de motor y creando una comunidad en la que otros puedan compartir su entusiasmo por estos mundos apasionantes.</p>
     <ul>
       <li><a href="https://www.facebook.com/maykel.bautista79/"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
       <li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
       <li><a href="#"><i class="fa fa-google-plus-square" aria-hidden="true"></i></i></a></li>
       <li><a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
     </ul>
-    
-  <li ><a href="index.html#SOBREMI" class="regreso"> Volver </a></li>
-  
+    <li><a href="index.html#SOBREMI" class="regreso"> Volver </a></li>
   </section>
+  
 
-  <video onloadedmetadata="this.muted=true" autoplay loop>
-    <source src="./video/video (2160p).mp4">
-</video>
-
-    
+  
+  
 </body>
 </html>
