--- a/reflexion1.html
+++ b/reflexion1.html
@@ -18,7 +18,7 @@
       </footer>
 
       <div class="about">
-        <img src="img/Reflexiones/tecnologia web.webp" alt="">
+        <img src="https://images.pexels.com/photos/7114/laptop-mobile.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
         <div class="about-info">
           <h2 class="preguntas_titulo">Tecnologías Web</h2>
           <div class="divider"></div>
