--- a/reflexion2.html
+++ b/reflexion2.html
@@ -18,7 +18,7 @@
       </footer>
 
       <div class="about">
-        <img src="img/Reflexiones/web.jpg" alt="">
+        <img src="https://images.pexels.com/photos/7362/startup-photos.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
         <div class="about-info">
           <h2>Open Web Plarform - Web Abierta</h2>
           <div class="divider"></div>
