--- a/reflexion3.html
+++ b/reflexion3.html
@@ -18,7 +18,7 @@
       </footer>
 
       <div class="about">
-        <img src="img/Reflexiones/java.jpg" alt="">
+        <img src="https://images.pexels.com/photos/38519/macbook-laptop-ipad-apple-38519.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
         <div class="about-info">
           <h2>HTML, CSS Y JS</h2>
           <div class="divider"></div>
