--- a/reflexion4.html
+++ b/reflexion4.html
@@ -18,7 +18,7 @@
       </footer>
 
       <div class="about">
-        <img src="img/Reflexiones/html.jpg" alt="">
+        <img src="https://images.pexels.com/photos/196647/pexels-photo-196647.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
         <div class="about-info">
           <h2>FrontEnd con ECMAScript</h2>
           <h2>FrontEnd con ECMAScript</h2>
