--- a/reflexion5.html
+++ b/reflexion5.html
@@ -18,7 +18,7 @@
       </footer>
 
       <div class="about">
-        <img src="img/Reflexiones/react.jpg" alt="">
+        <img src="https://images.pexels.com/photos/326508/pexels-photo-326508.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
         <div class="about-info">
           <h2>Introduccion a REACT</h2>
           <div class="divider"></div>
