--- a/reflexion6.html
+++ b/reflexion6.html
@@ -18,7 +18,7 @@
       </footer>
 
       <div class="about">
-        <img src="img/Reflexiones/js.jpg" alt="">
+        <img src="https://images.pexels.com/photos/1438081/pexels-photo-1438081.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
         <div class="about-info">
           <h2>Eventos, condiciones y Bucles en JavaScript</h2>
           <div class="divider"></div>
