--- a/semana15.html
+++ b/semana15.html
@@ -15,7 +15,7 @@
     
    <header>
     <section>
-        <div class="presentacion">
+        <div class="presentacion_1">
            
             <h1 class="titulo"> Consumo de un Microservicio</h1>
             <h3 class="nombre">Configuración avanzada en Eureka
@@ -23,9 +23,9 @@
 
     </div>
 
-        <video onloadedmetadata="this.muted=true" autoplay loop>
-        <source src="./video/video (2160p).mp4">
-        </video>
+    <div class="fondoprincipal">
+        <img src="https://images.pexels.com/photos/839115/pexels-photo-839115.png?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+      </div>
     </section>
    </header>
 
