--- a/semana3.html
+++ b/semana3.html
@@ -15,16 +15,16 @@
     
    <header>
     <section>
-        <div class="presentacion">
+        <div class="presentacion_1">
             
             <h1 class="titulo"> HTML CSS y Librerias (Framework)</h1>
             <h3 class="nombre">Descubre todo lo que se aprendio en la tercera semana</h3>
 
     </div>
 
-        <video onloadedmetadata="this.muted=true" autoplay loop>
-        <source src="./video/video (2160p).mp4">
-        </video>
+    <div class="fondoprincipal">
+        <img src="https://images.pexels.com/photos/5483071/pexels-photo-5483071.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+      </div>
     </section>
    </header>
 
