--- a/semana6.html
+++ b/semana6.html
@@ -15,16 +15,16 @@
     
    <header>
     <section>
-        <div class="presentacion">
+        <div class="presentacion_1">
            
             <h1 class="titulo"> Eventos, Condiciones y Bucles con JS</h1>
             <h3 class="nombre">Descubre todo lo que se aprendio en la sexta semana</h3>
 
     </div>
 
-        <video onloadedmetadata="this.muted=true" autoplay loop>
-        <source src="./video/video (2160p).mp4">
-        </video>
+    <div class="fondoprincipal">
+        <img src="https://images.pexels.com/photos/777001/pexels-photo-777001.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+      </div>
     </section>
    </header>
 
