--- a/semana7.html
+++ b/semana7.html
@@ -15,16 +15,16 @@
     
    <header>
     <section>
-        <div class="presentacion">
+        <div class="presentacion_1">
            
             <h1 class="titulo"> Uso de Hooks</h1>
             <h3 class="nombre">Descubre todo lo que se aprendio en la septima semana</h3>
 
     </div>
 
-        <video onloadedmetadata="this.muted=true" autoplay loop>
-        <source src="./video/video (2160p).mp4">
-        </video>
+    <div class="fondoprincipal">
+        <img src="https://images.pexels.com/photos/1714205/pexels-photo-1714205.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
+      </div>
     </section>
    </header>
 
